css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
* {
  box-sizing: border-box;
}
html {
  font-size: 62.5%;
}
html,
body {
  font-family: 'Ubuntu', sans-serif;
  color: #5E6164;
}
h1,
h2,
h3,
h4,
h5 {
  font-family: 'Russo One', sans-serif;
  color: #23293B;
}
h2 {
  font-size: 3.2rem;
}
h3 {
  font-size: 2.8rem;
}
p {
  font-size: 1.6rem;
  line-height: 1.4;
}
.container {
  max-width: 800px;
  width: 100%;
  margin: 0 auto;
}
.page-header {
  background: #F6F6F6;
  padding: 10px 0;
  border-bottom: 2pxs solid #F1F1F1;
}
.page-header .logotype h1 {
  font-size: 4rem;
  text-align: center;
  margin-bottom: 20px;
}
.page-header nav ul {
  text-align: center;
}
.page-header nav a {
  text-decoration: none;
  color: #454A59;
  font-size: 1.6rem;
  padding: 10px 15px;
}
.page-header nav a:hover {
  text-decoration: underline;
}
footer {
  color: #22283B;
  background: #f4f4f4;
  padding: 20px 0;
  border: 1px double #e0e0e0;
  border-radius: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.home .intro img {
  border-radius: 6px;
  width: 100%;
}
.home .intro h2 {
  padding: 15px;
}
.home .intro p {
  padding: 0 15px;
}
.home .space-images {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}
.home .space-images img {
  width: 28%;
  margin: 20px 2.5%;
  border-radius: 20px;
  height: 100%;
}
@media (max-width: 500px) {
  .home .space-images .sky,
  .home .space-images .launch {
    display: none;
  }
  .home .space-images img {
    width: 100%;
    margin: 20px 5%;
  }
}
.home .visit-planets {
  padding: 15px;
}
.home .visit-planets h3 {
  margin-top: 11px;
}
.home .visit-planets p {
  margin-top: 13px;
}
.home .walk {
  margin-top: 60px;
  border-top: 1px solid #dee2e6;
  padding: 50px 60px;
  display: flex;
  justify-content: center;
}
.home .walk .walk-text {
  width: 50%;
}
.home .walk .walk-text h3 {
  margin-bottom: 10px;
}
.home .walk .walk-text p {
  margin-bottom: 26px;
}
.home .walk .walk-text .btn {
  display: inline-block;
  color: white;
  background: #23293B;
  font-size: 1.8rem;
  text-align: center;
  padding: 0.7rem 1.7rem;
  border: 2px solid transparent;
  border-radius: 6px;
}
.home .walk .walk-text .btn:hover {
  color: #23293B;
  background: white;
  border: 2px solid #23293B;
  cursor: pointer;
}
.home .walk .walk-img {
  width: 46%;
  margin-left: 4%;
}
.home .walk .walk-img img {
  width: 100%;
  height: auto;
  border-radius: 10px;
}
@media (max-width: 500px) {
  .home .walk {
    flex-direction: column-reverse;
    margin-top: 30px;
    padding: 20px 15px;
  }
  .home .walk .walk-img,
  .home .walk .walk-text {
    width: 100%;
    margin: 0;
  }
  .home .walk .walk-text {
    padding-top: 20px;
  }
  .home .walk .walk-text .btn {
    width: 100%;
    padding-top: 25px;
    padding-bottom: 25px;
  }
}

